--- a/lead_docs/ui/src/globals.css
+++ b/lead_docs/ui/src/globals.css
@@ -94,3 +94,7 @@
     @apply font-sans antialiased bg-accent text-foreground;
   }
 }
+
+.menu :where(li ul) {
+  margin-inline-start: 3px !important;
+}
